<!--
  ~ Copyright (c) 2020. Borja Villarroya Rodriguez, All rights reserved
  -->

<resources>
    <string name="app_name">Share your ride</string>
    <string name="app_label">SyR</string>
    <string name="title_activity_testctivity">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="session_state_test">Session state</string>
    <string name="rotation_test">Rotation</string>
    <string name="accelartion_test">Acceleration</string>
    <string name="gravity_test">Gravity</string>
    <string name="x"> x = </string>
    <string name="y"> y = </string>
    <string name="z"> z =</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="distance">Distance</string>
    <string name="weather_test">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_test">Wind</string>
    <string name="wind_speed">wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="body">body_test</string>
    <string name="heart_rate">Heart rate</string>
    <string name="title_activity_test_tabbed">TestTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_settings">Configuration</string>

    <!-- Preference Titles -->
    <string name="units_header">Unit System</string>
    <string name="telemetry_header">Telemetry data</string>

    <!-- Units Preferences -->
    <string name="unit_system_title">System</string>
    <string name="imperial_system">Imperial</string>
    <string name="metric_system">Metric</string>
    <string name="custom_system">Custom</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kmh">Km/h</string>
    <string name="mph">Mph</string>
    <string name="mps">m/s</string>

    <!-- telemetry Preferences -->
    <string name="telemetry_title">Metrics</string>
    <string name="attachment_title">Configure the metrics that are to be included in the activity</string>
    <string name="gforce">G force</string>
    <string name="wind">Wind</string>
    <string name="inclination_terrain">Terrain inclination</string>
    <string name="lean_angle">Lean angle</string>
    <string name="motorbike">Motorbike</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="snowboard">Snowboard/Ski</string>
    <string name="longboard">Longboard</string>
    <string name="skydiving">Skydiving</string>
    <string name="sailing">Sailing</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="ipAddress">IP address</string>
    <string name="password">Password</string>
    <string name="security">Security</string>
    <string name="ssid">SSID</string>
    <string name="name">Name</string>
    <string name="camera_model">Camera model</string>
    <string name="video_path">Video path</string>
    <string name="close_session_error">Unable to close the session</string>
    <string name="delete_account_error">Unable to delete user account</string>

    <!--MENU-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sync_camera">Synchronize camera</string>
    <string name="logout">Logout</string>
    <string name="delete_user_account">Delete user account</string>
    <string name="close">close</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb').-->
    <string name="facebook_application_id" translatable="false">326930385045215</string>
    <string name="facebook_app_id" translatable="false">326930385045215</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb326930385045215</string>

    <string name="wifi_state">WIFI state</string>
    <string name="gps_state">GPS state</string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="configure_cam">Configure a camera to start recording an activity</string>
    <string name="activity_kind_label">Activity</string>
    <string name="start_activity">Start activity</string>
    <string name="continue_activity">Continue</string>
    <string name="gyroscope_calibration_advise">Please leave the phone in its bracket to calibrate</string>
    <string name="calibrating">Calibrating…</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_port">camera_port</string>
    <string name="port">Port</string>
    <string name="protocol">Protocol</string>
    <string name="sync_control_text">SYR Requires to synchronize camera</string>
    <string name="sync_delay_text">SYR Getting delay</string>
    <string name="rtsp_protocol">rtsp</string>

    <string name="calibration_success_notification">Calibrated!</string>
    <string name="calibration_error_notification">Unable to calibrate gyroscopes</string>
    <string name="retry_calibration">Retry</string>
    <string name="stop_activity">Stop activity</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>


    <string name="creating_video_notification">Creating video of the activity</string>
    <string name="meters_unit">m</string>
    <string name="feet_unit">ft</string>
    <string name="kilometers_unit">km</string>
    <string name="miles_unit">mi</string>
    <string name="percentage">%</string>
    <string name="kilometers_hour_unit"> km/h</string>
    <string name="miles_hour_unit">mph</string>
    <string name="meters_per_seconds_unit"> m/s\u00B2</string>
    <string name="feet_per_seconds_unit"> ft/s\u00B2</string>
    <string name="degrees">°</string>
    <string name="creating_video_please_wait">Creating video, please wait</string>
    <string name="video_created">Video created!!, Watch it in the gallery</string>
    <string name="video_failed">Video creation failed</string>
    <string name="average">Average</string>
    <string name="maximum">Maximum</string>
    <string name="maxLeft">Max. Left</string>
    <string name="maxRight">Max. Right</string>
    <string name="maxUphill">Max. Uphill</string>
    <string name="maxDownhill">Max. Downhill</string>
    <string name="minimum">Minimum</string>
    <string name="total">Total</string>

    <string name="session_unknown"> </string>
    <string name="session_not_initiated">No activity initiated yet</string>
    <string name="session_ongoing">Activity ongoing</string>
    <string name="session_calibrating">Calibrating gyroscopes</string>
    <string name="session_creating_video">Creating video</string>
    <string name="session_video_finished">Activity video created</string>

    <string name="gravity_force">G</string>
    <string name="synchronizing_video">Synchronizing video</string>
    <string name="video_synchronization_message">Synchronize the video and the tilt angle</string>
</resources>
